# System-design

1/: README.md  workspace.dsl
2/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  openapi.yaml  requirements.txt
2/app/: auth.py  main.py  schemas.py  storage.py
2/configs/: config.yaml
2/scripts/: generate_openapi.py
2/src/handlers/: auth_handlers.cpp  recipe_handlers.cpp  user_handlers.hpp
2/src/middlewares/: auth_middleware.cpp  auth_middleware.hpp
2/src/storage/: recipe_storage.cpp  recipe_storage.hpp
2/src/utils/: http_utils.cpp  http_utils.hpp  string_utils.cpp
2/tests/: test_api.py
3/: CMakeLists.txt  Dockerfile  README.md  data.sql  docker-compose.yaml  optimization.md  queries.sql  schema.sql
3/configs/: config.yaml  config_vars.docker.yaml  config_vars.testsuite.yaml  config_vars.yaml
3/db-init/: 00-create-test-db.sql
3/src/: main.cpp
3/src/domain/: json.cpp  json.hpp  models.hpp
3/src/handlers/: auth_handlers.cpp  auth_handlers.hpp  recipe_handlers.cpp  recipe_handlers.hpp  user_handlers.cpp
3/src/middlewares/: auth_middleware.cpp
3/src/storage/: recipe_storage.cpp  recipe_storage.hpp
3/src/utils/: http_utils.cpp  http_utils.hpp  string_utils.hpp
3/tests/: test_api.py
4/: CMakeLists.txt  README.md  data.js  docker-compose.yaml  openapi.yaml  queries.js  schema_design.md  validation.js
4/configs/: config.yaml  config_vars.testsuite.yaml  config_vars.yaml
4/mongo/init/: 01-validation.js  02-seed.js
4/src/: main.cpp
4/src/domain/: json.cpp  models.hpp
4/src/handlers/: base_handler.hpp  user_handlers.cpp
4/src/storage/: recipe_storage.cpp  recipe_storage.hpp
4/tests/: conftest.py
